Bug preview
Corrigido bug de travamento ao clicar em pré-visualizar caso durante processamento do IPED